// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser class-docs.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [
        Object {
          "comment": "Foo class",
          "tag": "description",
        },
        Object {
          "comment": "foo",
          "tag": "see",
        },
        Object {
          "comment": "\`\`\`javascript
 * const foo = new Foo();
 * \`\`\`",
          "tag": "usage",
        },
      ],
      "exported": true,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
    },
  },
}
`;

exports[`Parser class-extends.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
    },
    "Bar" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "extendedClass": "Foo",
      "id": "Bar",
      "implementedInterfaces": Array [],
      "kind": 238,
    },
  },
}
`;

exports[`Parser class-implements.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
    "Bar" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Bar",
      "kind": 239,
    },
    "Baz" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "Baz",
      "implementedInterfaces": Array [
        "Foo",
        "Bar",
      ],
      "kind": 238,
    },
  },
}
`;

exports[`Parser class-mixed-extends-and-implements.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
    "Bar" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Bar",
      "kind": 239,
    },
    "Baz" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedClass": null,
      "id": "Baz",
      "implementedInterfaces": Array [],
      "kind": 238,
    },
    "Quoz" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "extendedClass": "Baz",
      "id": "Quoz",
      "implementedInterfaces": Array [
        "Foo",
        "Bar",
      ],
      "kind": 238,
    },
  },
}
`;

exports[`Parser export-class.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
    },
  },
}
`;

exports[`Parser export-default-class.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => ClassParseResult {
      "defaultExported": true,
      "docs": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "Foo",
      "implementedInterfaces": Array [],
      "kind": 238,
    },
  },
}
`;

exports[`Parser export-default-function.ts 1`] = `
Object {
  "nodes": Map {
    "foo" => FunctionParseResult {
      "defaultExported": true,
      "docs": Array [],
      "exported": true,
      "id": "foo",
      "kind": 237,
    },
  },
}
`;

exports[`Parser export-default-interface.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": true,
      "docs": Array [],
      "exported": true,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
  },
}
`;

exports[`Parser export-function.ts 1`] = `
Object {
  "nodes": Map {
    "foo" => FunctionParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "id": "foo",
      "kind": 237,
    },
  },
}
`;

exports[`Parser export-interface.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
  },
}
`;

exports[`Parser export-variable.ts 1`] = `
Object {
  "nodes": Map {
    "FOO" => VariableParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "id": "FOO",
      "kind": 235,
      "type": "string",
    },
  },
}
`;

exports[`Parser interface-extends.ts 1`] = `
Object {
  "nodes": Map {
    "Foo" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "kind": 239,
    },
    "Bar" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Bar",
      "kind": 239,
    },
    "Baz" => InterfaceParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": false,
      "extendedInterfaces": Array [
        "Foo",
        "Bar",
      ],
      "id": "Baz",
      "kind": 239,
    },
  },
}
`;

exports[`Parser variable-docs.ts 1`] = `
Object {
  "nodes": Map {
    "FOO" => VariableParseResult {
      "defaultExported": false,
      "docs": Array [
        Object {
          "comment": "Represents value of \`FOO\`.",
          "tag": "description",
        },
      ],
      "exported": true,
      "id": "FOO",
      "kind": 235,
      "type": "string",
    },
  },
}
`;

exports[`Parser variable-type.ts 1`] = `
Object {
  "nodes": Map {
    "FOO" => VariableParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "id": "FOO",
      "kind": 235,
      "type": "number",
    },
    "BAR" => VariableParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "id": "BAR",
      "kind": 235,
      "type": "number",
    },
    "BAZ" => VariableParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "id": "BAZ",
      "kind": 235,
      "type": "string",
    },
    "QUOZ" => VariableParseResult {
      "defaultExported": false,
      "docs": Array [],
      "exported": true,
      "id": "QUOZ",
      "kind": 235,
      "type": "string",
    },
  },
}
`;
